--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,39 @@
+.body {
+  margin: auto;
+  width: 75%;
+  padding-top: 3%;
+}
+
+/* index.html grid */
+#photos {
+  line-height: 0;
+  -webkit-columns: 5 100px;
+  -webkit-column-gap:   0px;
+  -moz-columns:    5 100px;
+  -moz-column-gap:      0px;
+  columns:         5 100px;
+  column-gap:           0px;
+}
+
+#photos img {
+  width: 100%;
+  height: auto;
+  padding: 5%;
+}
+
+/* visual splash page */
+#projects {
+  margin-left: 25%;
+  margin-right: 25%;
+  display: inline-block;
+}
+
+#projects img {
+  width: 100%;
+  max-width: 750px;
+  height: auto;
+}
+/* nav list */
 nav {
   text-align: center;
 }
@@ -5,62 +41,6 @@ nav {
 .header {
   text-align: center;
 }
-
-.body {
-  display: flex;
-  padding-top: 3%;
-  text-align: center;
-}
-
-#photos {
-  /* Prevent vertical gaps */
-  line-height: 0;
-  -webkit-column-count: 5;
-  -webkit-column-gap:   0px;
-  -moz-column-count:    5;
-  -moz-column-gap:      0px;
-  column-count:         5;
-  column-gap:           0px;
-
-  -webkit-column-break-inside: avoid;
-}
-
-#photos img {
-  /* Just in case there are inline attributes */
-  width: 100% !important;
-  height: auto !important;
-  padding: 3%;
-}
-
-@media (max-width: 1200px) {
-  #photos {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         4;
-  }
-}
-@media (max-width: 1000px) {
-  #photos {
-  -moz-column-count:    3;
-  -webkit-column-count: 3;
-  column-count:         3;
-  }
-}
-@media (max-width: 800px) {
-  #photos {
-  -moz-column-count:    2;
-  -webkit-column-count: 2;
-  column-count:         2;
-  }
-}
-@media (max-width: 400px) {
-  #photos {
-  -moz-column-count:    1;
-  -webkit-column-count: 1;
-  column-count:         1;
-  }
-}
-
 ul {
   text-align: center;
   list-style-type: none;
