--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+html {
+  dislay: table;
+  margin: auto;
+}
+
 .body {
   margin: auto;
-  width: 75%;
-  padding-top: 3%;
 }
 
 /* index.html grid */
@@ -22,18 +25,76 @@
 }
 
 /* visual splash page */
-#projects {
-  margin-left: 25%;
-  margin-right: 25%;
-  display: inline-block;
+.projects {
+  width: 50%;
+  margin: auto;
 }
 
-#projects img {
+.projects img {
   width: 100%;
-  max-width: 750px;
   height: auto;
+  display: inline-block;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
-/* nav list */
+
+/*.img-container {
+  position: relative;
+}
+
+.img-container .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top:30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}*/
+
+.img-container {
+  padding-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 50vw;
+  height: calc(9 * 50vw / 16);
+}
+
+.img-container img {
+  position: absolute;
+}
+
+.img-container:hover img {
+  opacity: 0.3;
+}
+
+.img-container:hover .middle {
+  opacity: 1;
+}
+
+.project-title {
+  margin: 0;
+  font-size: 32px;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.project-description {
+  padding-top: 2vh;
+  margin: 0;
+}
+
+.text {
+  font-style: italic;
+  color: black;
+  font-size:16px;
+  text-align: center;
+  padding
+}
+/* nav list and link formatting */
 nav {
   text-align: center;
 }
@@ -41,13 +102,41 @@ nav {
 .header {
   text-align: center;
 }
+
+.header h1 a {
+  text-decoration: none;
+  color: black;
+}
+
+.header h1 a:hover {
+  color: gray;
+}
+
 ul {
+  text-decoration: none;
   text-align: center;
   list-style-type: none;
   margin: 0;
   padding-top: 0;
   overflow: hidden;
 }
+
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: gray;
+}
+
+a:active {
+    color: black;
+}
+
 
 li {
   text-align: center;
