--- a/css/styles.css
+++ b/css/styles.css
@@ -8,51 +8,61 @@ html {
 }
 
 /* index.html grid */
-#photos {
+.photos {
+  padding-top: 3%;
+  width: 75%;
+  margin: auto;
   line-height: 0;
   -webkit-columns: 5 100px;
-  -webkit-column-gap:   0px;
+  -webkit-column-gap:   3vh;
   -moz-columns:    5 100px;
-  -moz-column-gap:      0px;
+  -moz-column-gap:      3vh;
   columns:         5 100px;
-  column-gap:           0px;
+  column-gap:           3vh;
 }
 
-#photos img {
+.photos img {
   width: 100%;
   height: auto;
-  padding: 5%;
+  padding-top: 3vh;
+}
+
+/* atx grid */
+.atx-photos {
+  padding-top: 0;
+  width: 75%;
+  margin: auto;
+  line-height: 0;
+  -webkit-columns: 2 100px;
+  -webkit-column-gap:   3vh;
+  -moz-columns:    2 100px;
+  -moz-column-gap:      3vh;
+  columns:         2 100px;
+  column-gap:           3vh;
+}
+
+.atx-photos img {
+  width: 100%;
+  height: auto;
+  padding-top: 1vh;
 }
 
 /* visual splash page */
 .projects {
-  width: 50%;
   margin: auto;
+  padding-bottom: 5vh;
 }
 
 .projects img {
   width: 100%;
   height: auto;
   display: inline-block;
-  transition: .5s ease;
+  transition: all .5s ease;
   backface-visibility: hidden;
 }
 
-/*.img-container {
-  position: relative;
-}
-
-.img-container .middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top:30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
-}*/
-
 .img-container {
+  margin: auto;
   padding-top: 5vh;
   display: flex;
   flex-direction: column;
@@ -92,8 +102,29 @@ html {
   color: black;
   font-size:16px;
   text-align: center;
-  padding
+  text-decoration: none;
 }
+
+.visual-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+/* page intro */
+.page-intro {
+  width: 75%;
+  margin: auto;
+  text-align: left;
+}
+
+.page-intro h1 {
+  padding-left: 3%;
+  text-decoration: underline;
+  font-style: italic;
+}
+
 /* nav list and link formatting */
 nav {
   text-align: center;
@@ -123,6 +154,7 @@ ul {
 
 a:link {
     color: black;
+    text-decoration: none;
 }
 
 a:visited {
