--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,24 @@ html {
 
 .body {
   margin: auto;
+  width: 75%;
 }
 
+.avatar {
+  vertical-align: middle;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: auto;
+}
+
+p.about {
+  text-align: center;
+}
 /* index.html grid */
 .photos {
   padding-top: 3%;
-  width: 75%;
+  width: 100%;
   margin: auto;
   line-height: 0;
   -webkit-columns: 5 100px;
@@ -176,7 +188,6 @@ ul {
 
 a:link {
     color: black;
-    text-decoration: none;
 }
 
 a:visited {
