--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,13 @@ p.single {
 }
 
 
+#footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  margin: auto;
+  width: 100%;
+}
 
 /* project descriptions */
 .header-img {
