--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ nav {
   color: gray;
 }
 
-ul {
+.header ul {
   text-decoration: none;
   text-align: center;
   list-style-type: none;
@@ -253,12 +253,12 @@ a:active {
 }
 
 
-li {
+.header li {
   text-align: center;
   display: inline-block;
 }
 
-li a {
+.header li a {
   padding: 14px 16px;
   text-decoration: none;
 }
